sorted/tests/06-pattern-path.stderr
error: Error::Fmt(e) should sort before Error::Io(e)
  --> tests/06-pattern-path.rs:33:13
   |
33 |             Error::Fmt(e) => write!(f, "{}", e),
   |             ^^^^^^^^^^^^^
